$Id: CHANGES,v 1.46 2005/10/12 18:18:28 psavola Exp $

09/28/2005	Add NEMO Basic support (RFC3961) and fix default
		HomeAgentLifetime, from Ville Nuorvala.

08/18/2005	Implement more robust timer handler, especially
		because some Linux kernels don't seem to behave
		all that well; see http://lkml.org/lkml/2005/4/29/163.
		Based on extensive testing & reports by
		Tomasz Grobelny.  NB: the bug report was caused by
		a bad timer patch in PLD's kernel package, and this
		should not occur often with standard kernels.

07/24/2005	Implement a new logging method "stderr_syslog" which is
		now also the default.  Everything is logged on syslog,
		while the most important messages (i.e., start-up failures)
		are also logged on stderr.

07/08/2005	Release 0.8.

07/05/2005	Change the more-specific route ND option code
		from de-facto '9' to the official '24'.  Change
		back in defaults.h if you need old behaviour.

07/05/2005	Fix wrongly calculated prefix with Base6to4Interface
                on ppc and maybe other big endian arches, from
		Debian #301543 by Sam Hathaway.

07/05/2005	Fix Linux-2.6.12-bk4+ error with HUP signal,
		from YOSHIFUJI Hideaki / USAGI.

03/29/2005	Merge a part of MIPv6/non-MIPv6 code, make printing
		error messages nicer.

03/22/2005	Be a bit more informative about config file parsing
		errors.

02/21/2005	Release 0.7.3.

02/19/2005	Fix crash when reloading config with AdvSendAdvert off.

02/15/2005	Merge a few fixes and improvements from USAGI:
		 - support microsecond scheduling and fix RA intervals
		 - send zero router lifetime when forwarding is disabled
		 - use a more flexible inter-RA delay

01/07/2005	Accomodate interface indexes > 9999, from Hagen Fritsch.

12/15/2004	Advertise zero Router Lifetime when shutting down;
		implements a SHOULD in RFC2461 section 6.2.5.

10/16/2004	Update Mobile IPv6 to match RFC 3775, from Greg Daley.

08/20/2004	Minor documentation cleanups.
